--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "startDev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "copy": "cp -r ./* /Users/luciagomez/Desktop/projects/lucia-gomez-server"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "i": "^0.3.7",
+    "imagekit": "^4.1.4",
     "mongoose": "^8.0.0",
     "node-mailjet": "^3.3.7",
     "nodemon": "^2.0.10",
