--- a/package.json
+++ b/package.json
@@ -1,39 +1,43 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "node index.js",
-		"startDev": "nodemon index.js",
-		"start:test": "NODE_ENV=test npm run start",
-		"test": "NODE_ENV=testBackend mocha --recursive --exit",
-		"coverage": "nyc --reporter=html npm run test",
-		"copy": "cp -r ./* /Users/luciagomez/Desktop/projects/lucia-gomez-server",
-		"dbRestore": "cd backup && bash db_restore.sh $TIMESTAMP"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"aws-sdk": "^2.1532.0",
-		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
-		"crypto-js": "^4.1.1",
-		"dotenv": "^16.0.3",
-		"express": "^4.17.1",
-		"i": "^0.3.7",
-		"imagekit": "^4.1.4",
-		"mongoose": "^8.0.0",
-		"node-mailjet": "^3.3.7",
-		"npm": "^9.6.6"
-	},
-	"devDependencies": {
-		"chai": "^3.5.0",
-		"chai-http": "^4.4.0",
-		"mocha": "^10.2.0",
-		"mongodb-memory-server": "^9.1.4",
-		"nodemon": "^2.0.10",
-		"nyc": "^15.1.0",
-		"sinon": "^17.0.1"
-	}
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "startDev": "nodemon index.js",
+    "start:test": "NODE_ENV=test npm run start",
+    "test": "NODE_ENV=testBackend mocha --recursive --exit",
+    "coverage": "nyc --reporter=html npm run test",
+    "copy": "cp -r ./* /Users/luciagomez/Desktop/projects/lucia-gomez-server",
+    "dbRestore": "cd backup && bash db_restore.sh $TIMESTAMP"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "aws-sdk": "^2.1532.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "ffmpeg-static": "^5.2.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "i": "^0.3.7",
+    "imagekit": "^4.1.4",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "node-mailjet": "^3.3.7",
+    "npm": "^9.6.6",
+    "sharp": "^0.33.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0",
+    "mongodb-memory-server": "^9.1.4",
+    "nodemon": "^2.0.10",
+    "nyc": "^15.1.0",
+    "sinon": "^17.0.1"
+  }
 }
